--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 
   <head>
     <script>
+      var div = document.createElement("div");
+
+　　　　//设置 div 属性，如 id
+　　　　div.setAttribute("id", "newDiv");
+
+　　　　div.innerHTML = "js div";
+　　　　parent.appendChild(div);
       </script>
     </head>
   <body>
