--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 　　　　div.setAttribute("id", "newDiv");
 
 　　　　div.innerHTML = "js div";
-　　　　document.body.append(div);
+　　　　document.body.appendChild(div);
       </script>
     </head>
   <body>
